public interface Connectable {
    
    public void turnOn();
    public void turnOff();
    public boolean isOn();

}
